RESOLVED FIXED158201
Reflection of element does not respect backdrop-filter property
https://bugs.webkit.org/show_bug.cgi?id=158201
Summary Reflection of element does not respect backdrop-filter property
Antoine Quint
Reported 2016-05-30 06:59:14 PDT
Created attachment 280095 [details] Testcase If an element that has a backdrop-filter applied to it has a reflection, the reflection does not use the backdrop filter.
Attachments
Testcase (843 bytes, text/html)
2016-05-30 06:59 PDT, Antoine Quint
no flags
Patch (23.53 KB, patch)
2016-06-03 07:21 PDT, Antoine Quint
no flags
Radar WebKit Bug Importer
Comment 1 2016-05-30 06:59:37 PDT
Antoine Quint
Comment 2 2016-06-03 06:31:29 PDT
I have reflections of elements with -webkit-backdrop-filter working fine on OS X, but it crashes on iOS.
Antoine Quint
Comment 3 2016-06-03 07:21:02 PDT
WebKit Commit Bot
Comment 4 2016-06-03 11:12:30 PDT
Comment on attachment 280441 [details] Patch Clearing flags on attachment: 280441 Committed r201648: <http://trac.webkit.org/changeset/201648>
WebKit Commit Bot
Comment 5 2016-06-03 11:12:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.